// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Citely Demo golden responses > ae-msb 的完整 ModuleResponse 匹配 golden 快照 1`] = `
{
  "checks": [
    {
      "basis": "missing_evidence",
      "id": "ae-cbuae-rps-license",
      "reason": "Missing required evidence: cbuae_rps_license",
      "result": "HOLD",
      "source": "CBUAE Retail Payment Services and Card Schemes Regulation (Circular No. 15/2021)",
    },
    {
      "basis": "missing_evidence",
      "id": "ae-aml-cft-program",
      "reason": "Missing required evidence: aml_cft_program",
      "result": "HOLD",
      "source": "Federal Decree by Law No. (10) of 2025 (AML/CFT/CPF)",
    },
    {
      "basis": "missing_evidence",
      "id": "ae-goaml-registration",
      "reason": "Missing required evidence: goaml_registration",
      "result": "HOLD",
      "source": "UAE FIU goAML Portal",
    },
    {
      "basis": "missing_evidence",
      "id": "ae-wire-transfer-information",
      "reason": "Missing required evidence: originator_beneficiary_information",
      "result": "HOLD",
      "source": "Cabinet Resolution No. (134) of 2025 (Executive Regulations of the AML Law)",
    },
    {
      "basis": "not_applicable",
      "id": "ae-vasp-license-path",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "VARA VA Transfer and Settlement Services Rulebook",
    },
    {
      "basis": "not_applicable",
      "id": "ae-payment-token-restrictions",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "CBUAE Payment Token Services Regulation, Article (12): Restrictions on Payment Tokens",
    },
  ],
  "disclaimer": "本 Module 为基于公开法源整理的 Demo 版本，输出为检查项状态，不构成法律意见。",
  "engine_version": "1.0.0",
  "evidence_hash": "073ad09af42c672d6811cb959013e441e4128cf2ca8645348c7b3b2d1a0f50e5",
  "hash_scheme_version": "2",
  "maintainer_wallet": "0x5555555555555555555555555555555555555555",
  "module": "ae-msb",
  "overall": "HOLD",
  "royalty_bps": 500,
  "settlement_constraints": {
    "blocked_check_ids": [
      "ae-cbuae-rps-license",
      "ae-aml-cft-program",
      "ae-goaml-registration",
      "ae-wire-transfer-information",
    ],
    "deal_id": "citely-demo-10000-usdc-ae",
    "escalated_check_ids": [],
    "evaluated_check_count": 4,
    "evidence_hash": "073ad09af42c672d6811cb959013e441e4128cf2ca8645348c7b3b2d1a0f50e5",
    "module": "ae-msb",
    "module_version": "2026.08.2",
    "valid_until": "2026-07-27T12:00:00.000Z",
  },
  "updated_at": "2026-08-04T00:00:00Z",
  "version": "2026.08.2",
}
`;

exports[`Citely Demo golden responses > eu-msb 的完整 ModuleResponse 匹配 golden 快照 1`] = `
{
  "checks": [
    {
      "basis": "missing_evidence",
      "id": "eu-psd2-payment-institution-authorisation",
      "reason": "Missing required evidence: eu_payment_institution_authorisation",
      "result": "HOLD",
      "source": "Directive (EU) 2015/2366 (PSD2)",
    },
    {
      "basis": "not_applicable",
      "id": "eu-emd2-emoney-authorisation",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "Directive 2009/110/EC (EMD2)",
    },
    {
      "basis": "missing_evidence",
      "id": "eu-amld-policies-controls",
      "reason": "Missing required evidence: eu_aml_policies_and_controls",
      "result": "HOLD",
      "source": "Directive (EU) 2015/849 (AMLD)",
    },
    {
      "basis": "not_applicable",
      "id": "eu-mica-casp-authorisation",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "Regulation (EU) 2023/1114 (MiCA)",
    },
    {
      "basis": "missing_evidence",
      "id": "eu-transfer-information-controls",
      "reason": "Missing required evidence: eu_transfer_information_controls",
      "result": "HOLD",
      "source": "Regulation (EU) 2023/1113",
    },
    {
      "basis": "manual_review",
      "id": "eu-amlr-2027-applicability",
      "reason": "Cannot be decided deterministically; manual review required: The AMLR is in force but its substantive provisions do not yet apply (they apply from 2027-07-10); this check only flags transition readiness and routes to manual review, and does not present future obligations as current violations",
      "result": "ESCALATE",
      "source": "Regulation (EU) 2024/1624 (AMLR)",
    },
    {
      "basis": "missing_evidence",
      "id": "eu-de-bafin-payment-emoney-authorisation",
      "reason": "Missing required evidence: bafin_payment_or_emoney_authorisation",
      "result": "HOLD",
      "source": "BaFin: Payment services licensing information",
    },
    {
      "basis": "not_applicable",
      "id": "eu-fr-acpr-payment-emoney-authorisation",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "ACPR: Payment institution authorisation",
    },
    {
      "basis": "not_applicable",
      "id": "eu-nl-dnb-payment-emoney-authorisation",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "DNB: Payment institutions public register",
    },
  ],
  "disclaimer": "本 Module 为基于公开法源整理的 Demo 版本，输出为检查项状态，不构成法律意见。",
  "engine_version": "1.0.0",
  "evidence_hash": "f66fcb973e79db4de2879b9deed1af4dd6405766e440847a6dd43676885d7d9b",
  "hash_scheme_version": "2",
  "maintainer_wallet": "0x5555555555555555555555555555555555555555",
  "module": "eu-msb",
  "overall": "ESCALATE",
  "royalty_bps": 500,
  "settlement_constraints": {
    "blocked_check_ids": [
      "eu-psd2-payment-institution-authorisation",
      "eu-amld-policies-controls",
      "eu-transfer-information-controls",
      "eu-de-bafin-payment-emoney-authorisation",
    ],
    "deal_id": "citely-demo-10000-usdc",
    "escalated_check_ids": [
      "eu-amlr-2027-applicability",
    ],
    "evaluated_check_count": 5,
    "evidence_hash": "f66fcb973e79db4de2879b9deed1af4dd6405766e440847a6dd43676885d7d9b",
    "module": "eu-msb",
    "module_version": "2026.08.1",
    "valid_until": "2026-07-27T12:00:00.000Z",
  },
  "updated_at": "2026-08-04T00:00:00Z",
  "version": "2026.08.1",
}
`;

exports[`Citely Demo golden responses > sg-msb 的完整 ModuleResponse 匹配 golden 快照 1`] = `
{
  "checks": [
    {
      "basis": "missing_evidence",
      "id": "sg-psa-licence-class",
      "reason": "Missing required evidence: mas_major_payment_institution_licence",
      "result": "HOLD",
      "source": "Payment Services Act 2019, section 6",
    },
    {
      "basis": "missing_evidence",
      "id": "sg-mas-register-lookup",
      "reason": "Missing required evidence: mas_financial_institution_directory_entry",
      "result": "HOLD",
      "source": "MAS Financial Institutions Directory",
    },
    {
      "basis": "missing_evidence",
      "id": "sg-psn01-aml-program",
      "reason": "Missing required evidence: mas_psn01_aml_cft_program",
      "result": "HOLD",
      "source": "MAS Notice PSN01",
    },
    {
      "basis": "not_applicable",
      "id": "sg-psn02-dpt-aml-program",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "MAS Notice PSN02",
    },
    {
      "basis": "not_applicable",
      "id": "sg-dpt-scope",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "Payment Services (Amendment) Act 2021",
    },
  ],
  "disclaimer": "本 Module 为基于公开法源整理的 Demo 版本，输出为检查项状态，不构成法律意见。",
  "engine_version": "1.0.0",
  "evidence_hash": "2d0a52a62a24a432f62f9ba9d29ea4c38cf19ca8dc901dcad4e7d0d0d007cda2",
  "hash_scheme_version": "2",
  "maintainer_wallet": "0x5555555555555555555555555555555555555555",
  "module": "sg-msb",
  "overall": "HOLD",
  "royalty_bps": 500,
  "settlement_constraints": {
    "blocked_check_ids": [
      "sg-psa-licence-class",
      "sg-mas-register-lookup",
      "sg-psn01-aml-program",
    ],
    "deal_id": "citely-demo-10000-usdc",
    "escalated_check_ids": [],
    "evaluated_check_count": 3,
    "evidence_hash": "2d0a52a62a24a432f62f9ba9d29ea4c38cf19ca8dc901dcad4e7d0d0d007cda2",
    "module": "sg-msb",
    "module_version": "2026.08.1",
    "valid_until": "2026-07-27T12:00:00.000Z",
  },
  "updated_at": "2026-08-04T00:00:00Z",
  "version": "2026.08.1",
}
`;

exports[`Citely Demo golden responses > uk-msb 的完整 ModuleResponse 匹配 golden 快照 1`] = `
{
  "checks": [
    {
      "basis": "missing_evidence",
      "id": "uk-fca-payment-institution-authorisation",
      "reason": "Missing required evidence: fca_payment_institution_authorisation_or_registration",
      "result": "HOLD",
      "source": "Payment Services Regulations 2017",
    },
    {
      "basis": "not_applicable",
      "id": "uk-fca-emoney-authorisation",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "Electronic Money Regulations 2011",
    },
    {
      "basis": "missing_evidence",
      "id": "uk-hmrc-aml-supervision",
      "reason": "Missing required evidence: hmrc_aml_registration_or_fca_supervision",
      "result": "HOLD",
      "source": "HMRC: Money laundering supervision for money service businesses",
    },
    {
      "basis": "missing_evidence",
      "id": "uk-mlr-policies-controls",
      "reason": "Missing required evidence: uk_aml_policies_and_controls",
      "result": "HOLD",
      "source": "Money Laundering Regulations 2017",
    },
    {
      "basis": "missing_evidence",
      "id": "uk-poca-sar-controls",
      "reason": "Missing required evidence: uk_sar_monitoring_and_reporting_controls",
      "result": "HOLD",
      "source": "Proceeds of Crime Act 2002",
    },
    {
      "basis": "not_applicable",
      "id": "uk-crypto-regulatory-perimeter",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "Financial Services and Markets Act 2000",
    },
  ],
  "disclaimer": "本 Module 为基于公开法源整理的 Demo 版本，输出为检查项状态，不构成法律意见。",
  "engine_version": "1.0.0",
  "evidence_hash": "abc3cb9c6a5798f9e96a5474b6c3e567aadf2a3a676f4a89394396b87df2e4ff",
  "hash_scheme_version": "2",
  "maintainer_wallet": "0x5555555555555555555555555555555555555555",
  "module": "uk-msb",
  "overall": "HOLD",
  "royalty_bps": 500,
  "settlement_constraints": {
    "blocked_check_ids": [
      "uk-fca-payment-institution-authorisation",
      "uk-hmrc-aml-supervision",
      "uk-mlr-policies-controls",
      "uk-poca-sar-controls",
    ],
    "deal_id": "citely-demo-10000-usdc",
    "escalated_check_ids": [],
    "evaluated_check_count": 4,
    "evidence_hash": "abc3cb9c6a5798f9e96a5474b6c3e567aadf2a3a676f4a89394396b87df2e4ff",
    "module": "uk-msb",
    "module_version": "2026.08.1",
    "valid_until": "2026-07-27T12:00:00.000Z",
  },
  "updated_at": "2026-08-04T00:00:00Z",
  "version": "2026.08.1",
}
`;

exports[`Citely Demo golden responses > us-msb 的完整 ModuleResponse 匹配 golden 快照 1`] = `
{
  "checks": [
    {
      "basis": "missing_evidence",
      "id": "us-fincen-registration-money-transmission",
      "reason": "Missing required evidence: fincen_msb_registration",
      "result": "HOLD",
      "source": "31 CFR § 1022.380",
    },
    {
      "basis": "not_applicable",
      "id": "us-fincen-registration-threshold-activities",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "31 CFR § 1010.100(ff)",
    },
    {
      "basis": "missing_evidence",
      "id": "us-bsa-aml-program",
      "reason": "Missing required evidence: bsa_aml_program",
      "result": "HOLD",
      "source": "31 CFR § 1022.210",
    },
    {
      "basis": "missing_evidence",
      "id": "us-sar-controls",
      "reason": "Missing required evidence: sar_monitoring_and_filing_controls",
      "result": "HOLD",
      "source": "31 CFR § 1022.320",
    },
    {
      "basis": "missing_evidence",
      "id": "us-ny-money-transmitter-license",
      "reason": "Missing required evidence: ny_money_transmitter_license",
      "result": "HOLD",
      "source": "NY Banking Law Article 13-B",
    },
    {
      "basis": "not_applicable",
      "id": "us-ny-bitlicense",
      "reason": "Rule conditions not triggered by this deal",
      "result": "NOT_APPLICABLE",
      "source": "23 NYCRR Part 200",
    },
  ],
  "disclaimer": "本 Module 为基于公开法源整理的 Demo 版本，输出为检查项状态，不构成法律意见。",
  "engine_version": "1.0.0",
  "evidence_hash": "44bf07506c3ba782b93d8208757737aee4894c0227a47865ca1d34e7b2aa45e4",
  "hash_scheme_version": "2",
  "maintainer_wallet": "0x5555555555555555555555555555555555555555",
  "module": "us-msb",
  "overall": "HOLD",
  "royalty_bps": 500,
  "settlement_constraints": {
    "blocked_check_ids": [
      "us-fincen-registration-money-transmission",
      "us-bsa-aml-program",
      "us-sar-controls",
      "us-ny-money-transmitter-license",
    ],
    "deal_id": "citely-demo-10000-usdc",
    "escalated_check_ids": [],
    "evaluated_check_count": 4,
    "evidence_hash": "44bf07506c3ba782b93d8208757737aee4894c0227a47865ca1d34e7b2aa45e4",
    "module": "us-msb",
    "module_version": "2026.07.1",
    "valid_until": "2026-07-27T12:00:00.000Z",
  },
  "updated_at": "2026-07-24T00:00:00Z",
  "version": "2026.07.1",
}
`;
